--- a/package.json
+++ b/package.json
@@ -1,71 +1,22 @@
 {
-  "name": "micoleao-appproject",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "bolado-app",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "concurrently \"vite\" \"node server.js\"",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "type-check": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "prepare": "husky install",
-    "deploy": "firebase deploy",
-    "deploy:hosting": "firebase deploy --only hosting",
-    "deploy:rules": "firebase deploy --only firestore:rules",
-    "clean": "rm -rf dist node_modules",
-    "start": "vite preview --host"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@fontsource/space-grotesk": "^5.2.8",
-    "@types/react": "18",
-    "@types/react-dom": "18",
-    "cors": "^2.8.5",
-    "cross-spawn": "7.0.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "firebase": "^11.9.0",
-    "node-fetch": "^2.7.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^7.6.2",
-    "tailwindcss-primeui": "^0.6.1",
-    "undici": "^7.10.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "lucide-react": "^0.293.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "concurrently": "^9.1.2",
-    "dotenv-cli": "^8.0.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "husky": "^9.0.11",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
-    "lucide-react": "^0.513.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
-    "terser-brunch": "^4.1.0",
-    "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vite-plugin-inspect": "^11.1.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
-  "functions": {}
+    "vite": "^4.4.0",
+    "typescript": "^5.1.6",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.13"
+  }
 }
